feat: structure the  intro

--- a/index.html
+++ b/index.html
@@ -15,5 +15,64 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div id="app">
+      <div class="intro">
+        <div class="info">
+          <header>
+            <div class="User">
+              <img src="assets/img/User.jpg" alt="" />
+              <img src="assets/icons/Code.svg" alt="" />
+            </div>
+
+            <div class="description">
+              <h3>Hello World! Meu nome é <span>Martina Santos</span> e sou</h3>
+              <h1>Desenvolvedora Fullstack</h1>
+              <p>
+                Transformo necessidades em aplicações reais, evolventes e
+                funcionais. Desenvolvo sistemas através da minha paixão pela
+                tecnologia, contribuindo com soluções inovadoras e eficazes para
+                desafios complexos.
+              </p>
+            </div>
+          </header>
+
+          <div class="tags">
+            <div class="cardTag">
+              <img src="assets/icons/GitHub.svg" alt="" />
+              <p>GitHub</p>
+            </div>
+
+            <div class="cardTag">
+              <img src="assets/icons/HTML.svg" alt="" />
+              <p>HTML</p>
+            </div>
+
+            <div class="cardTag">
+              <img src="assets/icons/CSS.svg" alt="" />
+              <p>CSS</p>
+            </div>
+
+            <div class="cardTag">
+              <img src="assets/icons/JavaScript.svg" alt="" />
+              <p>Javascript</p>
+            </div>
+
+            <div class="cardTag">
+              <img src="assets/icons/React.svg" alt="" />
+              <p>React</p>
+            </div>
+
+            <div class="cardTag">
+              <img src="assets/icons/Node.js.svg" alt="" />
+              <p>Node.js</p>
+            </div>
+          </div>
+        </div>
+        <img src="assets/icons/CaretDoubleDown.svg" alt="" />
+      </div>
+
+      
+    </div>
+  </body>
 </html>
