--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   </head>
   <body>
     <main id="app">
-      <section class="intro flex">
-        <div class="info flex">
+      <section class="containerIntro flex">
+        <div class="boxInfo flex">
           <header>
             <div class="avatar flex">
               <img
@@ -81,7 +81,63 @@
 
         <img src="assets/icons/CaretDoubleDown.svg" alt="setas para baixo" />
       </section>
-      
+
+      <section class="containerProjects flex">
+        <header>
+          <h3>Meu trabalho</h3>
+          <h2>Veja os projetos em destaque</h2>
+        </header>
+
+        <div class="boxProjects grid">
+          <div class="cardProject">
+            <img src="assets/img/Thumbnail_Project-01.png" alt="" />
+            <h3>Travelgram</h3>
+            <p>
+              Rede social onde as pessoas mostram os registros de suas viagens
+              pelo mundo
+            </p>
+          </div>
+
+          <div class="cardProject">
+            <img src="assets/img/Thumbnail_Project-02.png" alt="" />
+            <h3>Tech News</h3>
+            <p>
+              Rede social onde as pessoas mostram os registros de suas viagens
+              pelo mundoHomepage de um portal de notícias sobre a área de
+              tecnologia
+            </p>
+          </div>
+
+          <div class="cardProject">
+            <img src="assets/img/Thumbnail_Project-03.png" alt="" />
+            <h3>Página de receita</h3>
+            <p>Página com o passo a passo de uma receita para cupcakes</p>
+          </div>
+
+          <div class="cardProject">
+            <img src="assets/img/Thumbnail_Project-04.png" alt="" />
+            <h3>Zingen</h3>
+            <p>
+              Landing Page completa e responsiva de um aplicativo de Karaokê
+            </p>
+          </div>
+
+          <div class="cardProject">
+            <img src="assets/img/Thumbnail_Project-05.png" alt="" />
+            <h3>Refund</h3>
+            <p>Um sistema para pedido e acompanhamento de reembolso</p>
+          </div>
+
+          <div class="cardProject">
+            <img src="assets/img/Thumbnail_Project-06.png" alt="" />
+            <h3>Página de turismo</h3>
+            <p>
+              Página com as principais informações para quem quer viajar para
+              Busan
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
