--- a/index.html
+++ b/index.html
@@ -91,50 +91,143 @@
         <div class="boxProjects grid">
           <div class="cardProject">
             <img src="assets/img/Thumbnail_Project-01.png" alt="" />
-            <h3>Travelgram</h3>
-            <p>
-              Rede social onde as pessoas mostram os registros de suas viagens
-              pelo mundo
-            </p>
+
+            <div class="flex">
+              <h3>Travelgram</h3>
+              <p>
+                Rede social onde as pessoas mostram os registros de suas viagens
+                pelo mundo
+              </p>
+            </div>
           </div>
 
           <div class="cardProject">
             <img src="assets/img/Thumbnail_Project-02.png" alt="" />
-            <h3>Tech News</h3>
-            <p>
-              Rede social onde as pessoas mostram os registros de suas viagens
-              pelo mundoHomepage de um portal de notícias sobre a área de
-              tecnologia
-            </p>
+            <div class="flex">
+              <h3>Tech News</h3>
+              <p>
+                Homepage de um portal de notícias sobre a área de tecnologia
+              </p>
+            </div>
           </div>
 
           <div class="cardProject">
             <img src="assets/img/Thumbnail_Project-03.png" alt="" />
-            <h3>Página de receita</h3>
-            <p>Página com o passo a passo de uma receita para cupcakes</p>
+
+            <div class="flex">
+              <h3>Página de receita</h3>
+              <p>Página com o passo a passo de uma receita para cupcakes</p>
+            </div>
           </div>
 
           <div class="cardProject">
             <img src="assets/img/Thumbnail_Project-04.png" alt="" />
-            <h3>Zingen</h3>
-            <p>
-              Landing Page completa e responsiva de um aplicativo de Karaokê
-            </p>
+
+            <div class="flex">
+              <h3>Zingen</h3>
+              <p>
+                Landing Page completa e responsiva de um aplicativo de Karaokê
+              </p>
+            </div>
           </div>
 
           <div class="cardProject">
             <img src="assets/img/Thumbnail_Project-05.png" alt="" />
-            <h3>Refund</h3>
-            <p>Um sistema para pedido e acompanhamento de reembolso</p>
+
+            <div class="flex">
+              <h3>Refund</h3>
+              <p>Um sistema para pedido e acompanhamento de reembolso</p>
+            </div>
           </div>
 
           <div class="cardProject">
             <img src="assets/img/Thumbnail_Project-06.png" alt="" />
-            <h3>Página de turismo</h3>
-            <p>
-              Página com as principais informações para quem quer viajar para
-              Busan
-            </p>
+
+            <div class="flex">
+              <h3>Página de turismo</h3>
+              <p>
+                Página com as principais informações para quem quer viajar para
+                Busan
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="containerServices flex">
+        <header>
+          <h3>Meus serviços</h3>
+          <h2>Como posso ajudar os seu negócio</h2>
+        </header>
+
+        <div class="boxServices grid">
+          <div class="cardService">
+            <img src="assets/icons/Computer.svg" alt="" />
+            <div class="flex">
+              <h3>Websites e Aplicativos</h3>
+              <p>Desenvolvimento de interfaces</p>
+            </div>
+          </div>
+
+          <div class="cardService">
+            <img src="assets/icons/Database.svg" alt="" />
+            <div class="flex">
+              <h3>API e banco de dados</h3>
+              <p>Criação de serviços do sistema</p>
+            </div>
+          </div>
+
+          <div class="cardService">
+            <img src="assets/icons/DevOps.svg" alt="" />
+            <div class="flex">
+              <h3>DevOps</h3>
+              <p>Gestão e infraestrutura da aplicação</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="containerContacts">
+        <header>
+          <h3>Contato</h3>
+          <h2>Gostou do meu trabalho?</h2>
+          <p>Entre em contato ou acompanhe as minhas redes sociais!</p>
+        </header>
+        <div class="boxLinks">
+          <div class="cardLink">
+            <span>
+              <img src="assets/icons/Linkedin.svg" alt="" />
+              <p>Linkedin</p>
+            </span>
+
+            <img src="assets/icons/ArrowUpRight.svg" alt="" />
+          </div>
+
+          <div class="cardLink">
+            <span>
+              <img src="assets/icons/Instagram.svg" alt="" />
+              <p>Instagram</p>
+            </span>
+
+            <img src="assets/icons/ArrowUpRight.svg" alt="" />
+          </div>
+
+          <div class="cardLink">
+            <span>
+              <img src="assets/icons/GitHub.svg" alt="" />
+              <p>GitHub</p>
+            </span>
+
+            <img src="assets/icons/ArrowUpRight.svg" alt="" />
+          </div>
+
+          <div class="cardLink">
+            <span>
+              <img src="assets/icons/Email.svg" alt="" />
+              <p>E-mail</p>
+            </span>
+
+            <img src="assets/icons/ArrowUpRight.svg" alt="" />
           </div>
         </div>
       </section>
