--- a/index.html
+++ b/index.html
@@ -187,20 +187,21 @@
         </div>
       </section>
 
-      <section class="containerContacts">
+      <section class="containerContacts flex">
         <header>
           <h3>Contato</h3>
           <h2>Gostou do meu trabalho?</h2>
           <p>Entre em contato ou acompanhe as minhas redes sociais!</p>
         </header>
-        <div class="boxLinks">
+
+        <div class="boxLinks flex">
           <div class="cardLink">
             <span>
               <img src="assets/icons/Linkedin.svg" alt="" />
               <p>Linkedin</p>
             </span>
 
-            <img src="assets/icons/ArrowUpRight.svg" alt="" />
+            <img src="assets/icons/ArrowUpRight.svg" alt=""/>
           </div>
 
           <div class="cardLink">
